Updated files with necessary modifications

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main>
     <section class="hero" id="home">
       <div class="hero-image">
-        <img src="/images/me4.png" alt="Maitri">
+        <img src="me4.png" alt="Maitri">
       </div>
       <div class="text-icons">
         <div class="hero-text">
