changes in index.html file

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <!-- Image Slider on the right -->
 
         <div class="image-slider rounded-2xl shadow-lg">
-          <img src="/images/download (13).png" class="slider-img active">
-          <img src="/images/download (14).png" class="slider-img">
-          <img src="/images/download (15).png" class="slider-img">
-          <img src="/images/download (16).png" class="slider-img">
-          <img src="/images/download (17).png" class="slider-img">
+          <img src="download (13).png" class="slider-img active">
+          <img src="download (14).png" class="slider-img">
+          <img src="download (15).png" class="slider-img">
+          <img src="download (16).png" class="slider-img">
+          <img src="download (17).png" class="slider-img">
         </div>
 
         <!-- Floating Buttons for Skills & Tools -->
@@ -137,26 +137,26 @@
           <div class="card-list swiper-wrapper allcards">
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/amazon.png" alt="" class="user-image">
+                <img src="amazon.png" alt="" class="user-image">
 
               </div>
-              <h2 class="user-name">Amazon Clone</h2>
+              <h2 class="user-name">Amazon</h2>
               <p class="user-profession">A feature-rich e-commerce platform with a sleek UI.</p>
               <button class="message-button">Know more</button>
             </div>
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/netflix.jpg" alt="" class="user-image">
+                <img src="netflix.jpg" alt="" class="user-image">
               </div>
-              <h2 class="user-name">Netflix Clone</h2>
+              <h2 class="user-name">Netflix</h2>
               <p class="user-profession">A dynamic movie streaming platform with interactive UI.</p>
               <button class="message-button">Know more</button>
             </div>
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/spotify.jpg" alt="" class="user-image .spotify-img">
+                <img src="spotify.jpg" alt="" class="user-image .spotify-img">
               </div>
               <h2 class="user-name">Spotify</h2>
               <p class="user-profession">A music streaming app with playlists and audio controls.</p>
@@ -165,7 +165,7 @@
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/lazarev.png" alt="" class="user-image">
+                <img src="lazarev.png" alt="" class="user-image">
               </div>
               <h2 class="user-name">Lazarev</h2>
               <p class="user-profession">An innovative UI/UX case study for modern design trends</p>
@@ -174,7 +174,7 @@
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/patel infosys.png" alt="" class="user-image">
+                <img src="patel infosys.png" alt="" class="user-image">
               </div>
               <h2 class="user-name">Patel Infosys</h2>
               <p class="user-profession">A business website for IT services and solutions.</p>
@@ -183,7 +183,7 @@
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/women safety.png" alt="" class="user-image">
+                <img src="women safety.png" alt="" class="user-image">
               </div>
               <h2 class="user-name">Women safety</h2>
               <p class="user-profession">An emergency safety web app with live tracking features.</p>
@@ -192,7 +192,7 @@
 
             <div class="card-item swiper-slide">
               <div class="card-image">
-                <img src="/images/law game.png" alt="" class="user-image">
+                <img src="law game.png" alt="" class="user-image">
               </div>
               <h2 class="user-name">Law Game</h2>
               <p class="user-profession">An interactive legal awareness game for citizens.</p>
