Changed how icons appear icons

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </nav>
     <div class="icons">
       <div class="social-icons">
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/maitriCodeX"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/maitri-patel-33a90a252/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
       </div>
     </div>
